<resources>
    <string name="app_name">KnowYourJungle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <!--Login Page-->
    <string name="username_of_login_page">UserName</string>
    <string name="password_of_login_page">Password</string>
    <string name="hint_of_UserName">Enter you Username here</string>
    <string name="hint_of_Password">Enter you Password here</string>
    <string name="sign_up_here">Don\'t Have An Account ? Signup Here</string>
    <string name="login_button_login_page">Login</string>

    <!--SignUp Page-->
    <string name="username_of_signup_page">UserName</string>
    <string name="password_of_signup_page">Password</string>
    <string name="hint_of_UserName_signup">Enter you Username here</string>
    <string name="hint_of_Password_signup">Enter you Password here</string>
    <string name="hint_of_Password_signup_2">Retype you Password here</string>
    <string name="Signup_button">Sign Up</string>

    <string name="weather_topic">Weather</string>
    <string name="temperature_topic">Temperature</string>
    <string name="rainfall_topic">Rainfall</string>
    <string name="Pressure_topic">Pressure</string>

    <string name="default_web_client_id">395111101436-i2a446lrvk1t52g0pbd08c7qevhd2d9e.apps.googleusercontent.com</string>


</resources>
